--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,45 +1,53 @@
 version: '3'
 
 services:
-  api:
-    build:
-      context: ./apigw
-      dockerfile: Dockerfile
-    ports:
-      - "4000:4000"
-    depends_on:
-      - authservice
-      - redis
-      - salchipapitas
+ api:
+  build:
+   context: ./apigw
+   dockerfile: Dockerfile
+  ports:
+   - '4000:4000'
+  depends_on:
+   - authservice
+   - redis
+   - salchipapitas
 
-  authservice:
-    build:
-      context: ./authservice
-    ports:
-      - "3000:3000"
-    depends_on:
-      - redis
+ authservice:
+  build:
+   context: ./authservice
+  ports:
+   - '3000:3000'
+  depends_on:
+   - redis
 
-  redis:
-    image: "redis:latest"
-    ports:
-      - "6379:6379"
+ redis:
+  image: 'redis:latest'
+  ports:
+   - '6379:6379'
 
-  salchipapitas:
-    build:
-      context: ./salchipapitas
-      dockerfile: Dockerfile
-    ports:
-      - "5000:5000"
-    depends_on:
-      - authservice
-      - redis
-  besoscerezas:
-    build:
-      context: ./besoscerezas
-      dockerfile: Dockerfile
-    ports:
-      - "8080:8080"
-    depends_on:
-      - redis
-
+ salchipapitas:
+  build:
+   context: ./salchipapitas
+   dockerfile: Dockerfile
+  ports:
+   - '5002:5002'
+  depends_on:
+   - authservice
+   - redis
+ #  besoscerezas:
+ #   build:
+ #    context: ./besoscerezas
+ #    dockerfile: Dockerfile
+ #   ports:
+ #    - '8080:8080'
+ #   depends_on:
+ #    - redis
+ cachetadatrucha:
+  build:
+   context: ./cachetada_con_trucha
+   dockerfile: Dockerfile
+  ports:
+   - '5001:5001'
+  depends_on:
+   - authservice
+   - redis
